objects/G4S__Guest__c.object
<CustomObject>
    <fields>
        <fullName>G4S__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>G4S__End_Time__c</fullName>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G4S__Location_City__c</fullName>
        <label>Location City</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Location_Country_Code__c</fullName>
        <label>Location Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Location_Region__c</fullName>
        <label>Location Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>G4S__Session__c</fullName>
        <label>Glance Session</label>
        <referenceTo>G4S__Session__c</referenceTo>
        <relationshipLabel>Glance Guests</relationshipLabel>
        <relationshipName>Guests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>G4S__Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G4S__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>visitor</fullName>
                </value>
                <value>
                    <fullName>agent</fullName>
                </value>
                <value>
                    <fullName>host</fullName>
                </value>
                <value>
                    <fullName>guest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Glance Guest</label>
    <nameField>
        <label>Glance Guest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Glance Guests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>